Fix overflow issue!

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,9 +13,7 @@ $black: #000000;
 }
 
 html, body {
-  //overflow-x:hidden; ARRRRGGGGGGGHHHHH I don't know what the fix is here, but basically the mobile view gets completely broken when the body and HTML don't have overflow-x:hidden..BUT that causes a weird double scroll issue on the top area of the website! FUCK
-  //height:100%;
-  //overflow-x:hidden;
+
 }
 
 body{
@@ -101,7 +99,8 @@ p{
 
     @media (max-width: 550px) {
       left:45%;
-      width:75%;
+      width:55%;
+      top:230%;
     }
   }
 }
@@ -125,6 +124,11 @@ p{
     border-image-repeat: stretch;
     border-image-slice: 30;
     border-image-outset: 15px;
+
+    @media (max-width: 550px) {
+      border-left:0px;
+      border-right:0px;
+    }
 
     @media (max-width: 750px) {
       width:100%;
@@ -153,6 +157,7 @@ p{
 
     @media (max-width: 550px) {
       width:100%;
+      top:-64px;
     }
   }
 }
@@ -200,6 +205,7 @@ p{
 .artisinalStratContainer{
   transition: top 2s linear;
   display: block;
+
 }
 
 .artisinalStratContainer2{
@@ -213,6 +219,10 @@ p{
   padding-bottom:100px;
   z-index:11;
   transition: all 1s ease;
+
+  @media (max-width: 550px) {
+    overflow:hidden;
+  }
 
   .secondBlotch{
     position: absolute;
